--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   mongo_dart: ^0.10.0
   http: ^1.2.0
+  getwidget: ^4.0.0
+  flutter_stripe: ^10.1.0
+  pay: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -59,8 +62,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/skylark_logo.gif
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
