--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   getwidget: ^4.0.0
   flutter_stripe: ^10.1.0
   pay: ^1.1.0
+  animated_bottom_navigation_bar: ^1.3.3
+  circular_reveal_animation: ^2.0.1
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
