--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   animated_bottom_navigation_bar: ^1.3.3
   circular_reveal_animation: ^2.0.1
   auto_size_text: ^3.0.0
+  cached_network_image: ^3.3.1
+  shimmer: ^3.0.0
+  font_awesome_flutter: ^10.7.0
 
 dev_dependencies:
   flutter_test:
