--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   cached_network_image: ^3.3.1
   shimmer: ^3.0.0
   font_awesome_flutter: ^10.7.0
+  shared_preferences: ^2.2.2
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
