--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.18.0",
     "@types/http-errors": "^2.0.1",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.20",
+    "@types/passport": "^1.0.16",
+    "@types/passport-local": "^1.0.38",
     "eslint": "^8.47.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
@@ -22,11 +27,17 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.17",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "envalid": "^7.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "http-errors": "^2.0.0",
-    "mongoose": "^7.4.3"
+    "lodash": "^4.17.21",
+    "mongoose": "^7.4.3",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   }
 }
