--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,6 @@
     "@types/http-errors": "^2.0.1",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.20",
-    "@types/passport": "^1.0.16",
-    "@types/passport-local": "^1.0.38",
     "eslint": "^8.47.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
@@ -36,8 +34,6 @@
     "express-session": "^1.18.0",
     "http-errors": "^2.0.0",
     "lodash": "^4.17.21",
-    "mongoose": "^7.4.3",
-    "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "mongoose": "^7.4.3"
   }
 }
