--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   shared_preferences: ^2.2.2
   provider: ^6.1.2
+  sms_autofill: ^2.3.1
 
 dev_dependencies:
   flutter_test:
