--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   provider: ^6.1.2
   pinput: ^4.0.0
   intl_phone_number_input: ^0.7.4
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
