--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@types/http-errors": "^2.0.1",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.20",
+    "@types/otp-generator": "^4.0.2",
     "eslint": "^8.47.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
@@ -32,8 +33,10 @@
     "envalid": "^7.3.1",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
+    "follow-redirects": "^1.15.6",
     "http-errors": "^2.0.0",
     "lodash": "^4.17.21",
-    "mongoose": "^7.4.3"
+    "mongoose": "^7.4.3",
+    "otp-generator": "^4.0.1"
   }
 }
