--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   pinput: ^4.0.0
   intl_phone_number_input: ^0.7.4
   fluttertoast: ^8.2.4
-  go_router: ^13.2.1
+  infinite_scroll_pagination: ^4.0.0
 
 dev_dependencies:
   flutter_test:
