--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -28,6 +28,14 @@ dependencies:
   pinput: ^4.0.0
   intl_phone_number_input: ^0.7.4
   fluttertoast: ^8.2.4
+  flutter_launcher_icons: ^0.9.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logoBlackBackground.png"
+  adaptive_icon_background: "#141414"
+  adaptive_icon_foreground: "assets/images/play_store_512.png"
 
 dev_dependencies:
   flutter_test:
