--- a/server/package.json
+++ b/server/package.json
@@ -21,10 +21,12 @@
     "@types/otp-generator": "^4.0.2",
     "eslint": "^8.47.0",
     "nodemon": "^3.1.0",
+    "prisma": "^5.11.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@prisma/client": "^5.11.0",
     "@types/cors": "^2.8.17",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
