--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   video_player: ^2.8.3
   miniplayer: ^1.0.1
   intl: ^0.18.1
+  url_launcher: ^6.2.5
 
 flutter_icons:
   android: true
