--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -58,6 +58,8 @@ flutter:
     - assets/images/otpicon.png
     - assets/images/verifyicon.png
     - assets/images/error_network.png
+    - assets/images/donate1.png
+    - assets/images/donate2.png
     - assets/
   #   - images/a_dot_ham.jpeg
 
