--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.20",
     "@types/otp-generator": "^4.0.2",
+    "@types/qs": "^6.9.14",
     "eslint": "^8.47.0",
     "nodemon": "^3.1.0",
     "prisma": "^5.11.0",
@@ -39,6 +40,7 @@
     "http-errors": "^2.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^7.4.3",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "qs": "^6.12.0"
   }
 }
