--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -53,6 +53,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/skylark_logo.gif
+    - assets/images/skylarkgif.gif
     - assets/images/logoImage.png
     - assets/images/comiclist.jpg
     - assets/images/otpicon.png
