--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   miniplayer: ^1.0.1
   intl: ^0.18.1
   url_launcher: ^6.2.5
+  comment_tree: ^0.3.0
 
 flutter_icons:
   android: true
