--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   http: ^1.2.0
   getwidget: ^4.0.0
   flutter_stripe: ^10.1.0
-  pay: ^1.1.0
+  pay: ^2.0.0
   animated_bottom_navigation_bar: ^1.3.3
   circular_reveal_animation: ^2.0.1
   auto_size_text: ^3.0.0
@@ -34,6 +34,7 @@ dependencies:
   miniplayer: ^1.0.1
   intl: ^0.18.1
   url_launcher: ^6.2.5
+  in_app_purchase: ^3.2.0
 
 flutter_icons:
   android: true
@@ -64,6 +65,13 @@ flutter:
     - assets/images/skycoin.png
     - assets/images/donatebanner.png
     - assets/images/loginbanner.png
+    - assets/images/flowerring1.png
+    - assets/images/flowerring2.png
+    - assets/images/flowerring3.png
+    - assets/images/trophy.png
+    - assets/images/silvertrophy.png
+    - assets/images/goldtrophy.png
+    - assets/images/receivedcoin.gif
     - assets/
   #   - images/a_dot_ham.jpeg
 
