--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   intl: ^0.18.1
   url_launcher: ^6.2.5
   comment_tree: ^0.3.0
+  firebase_core: ^2.31.0
+  firebase_messaging: ^14.9.2
+  overlay_support: ^2.1.0
+
 
 flutter_icons:
   android: true
@@ -74,6 +78,8 @@ flutter:
     - assets/images/receivedcoin.gif
     - assets/images/user.png
     - assets/images/empty-box.png
+    - assets/images/VNPayLogo.png
+    - assets/images/ZaloPayLogo.png
     - assets/
   #   - images/a_dot_ham.jpeg
 
