Fix bug payment histories and buy chapter not update coin

--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -78,6 +78,7 @@ flutter:
     - assets/images/user.png
     - assets/images/loadingcomicimage.png
     - assets/images/empty-box.png
+    - assets/images/commentempty.png
     - assets/images/VNPayLogo.png
     - assets/images/ZaloPayLogo.png
     - assets/images/zalopay.png
